--- a/package/sla_common/pubspec.yaml
+++ b/package/sla_common/pubspec.yaml
@@ -1,20 +1,45 @@
 name: sla_common
-description: A new Flutter package project.
-version: 0.0.1
-homepage:
+description: A starting point for Dart libraries or applications.
+version: 1.0.0
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
-  flutter: ">=1.17.0"
+  sdk: ^3.0.6
 
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.1.0
-  flutter_bloc: ^8.1.3
+  http_parser:
+  hive: ^2.2.3
+  uuid: ^3.0.7
+  path: ^1.8.2
+  http: 1.1.0
+  intl: ^0.18.1
+  async: ^2.11.0
+  lottie: ^2.5.0
+  slidable_button:
+  location: ^4.3.0
+  sqflite: ^2.2.8+4
+  go_router: ^7.0.1
+  geocoding: ^2.1.0
+  expandable: ^5.0.1
+  wifi_scan: ^0.4.0+1
+  flutter_svg: ^2.0.5
+  mqtt_client: ^9.7.4
+  google_fonts: ^4.0.4
+  open_settings: ^2.0.2
+  path_provider: ^2.0.15
+  flutter_spinkit: ^5.2.0
+  flutter_vibrate: ^1.3.0
+  flutter_riverpod: ^2.3.6
+  connectivity_plus: ^4.0.2
+  flutter_screenutil: 5.7.0
+  permission_handler: ^10.2.0
+  cached_network_image: ^3.2.3
+  modal_bottom_sheet: ^3.0.0-pre
+  liquid_progress_indicator: ^0.4.0
+  syncfusion_flutter_gauges: 21.2.3
+  flutter_rounded_date_picker: ^3.0.4
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^2.0.0
-flutter:
+  lints: ^2.0.0
+  test: ^1.21.0
