--- a/package/sla_common/pubspec.yaml
+++ b/package/sla_common/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   path_provider: ^2.0.15
   flutter_spinkit: ^5.2.0
   flutter_vibrate: ^1.3.0
+  flutter_riverpod: ^2.3.6
   connectivity_plus: ^4.0.2
   flutter_blue_plus: 1.4.0
   flutter_screenutil: 5.7.0
