--- a/packages/sla_common/pubspec.yaml
+++ b/packages/sla_common/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
+  hive: ^2.2.3
   http_parser:
   uuid: ^3.0.7
   path: ^1.8.2
@@ -28,7 +30,6 @@ dependencies:
   path_provider: ^2.0.15
   flutter_spinkit: ^5.2.0
   flutter_vibrate: ^1.3.0
-  flutter_riverpod: ^2.3.6
   connectivity_plus: ^4.0.2
   flutter_blue_plus: 1.4.0
   flutter_screenutil: 5.7.0
@@ -42,12 +43,13 @@ dependencies:
       url: https://github.com/nasirdev74/sla_logger_app
       path: package/sla_logger
 
-
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.21.0
+
 flutter:
   uses-material-design: true
+
   assets:
-    - assets/
+    - assets/animations/
     - assets/icons/
