--- a/packages/sla_common/pubspec.yaml
+++ b/packages/sla_common/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_screenutil: 5.7.0
   permission_handler: ^10.2.0
   cached_network_image: ^3.2.3
+  modal_bottom_sheet: ^3.0.0-pre
   liquid_progress_indicator: ^0.4.0
   flutter_rounded_date_picker: ^3.0.4
 
