assets added on yaml file

--- a/packages/sla_common/pubspec.yaml
+++ b/packages/sla_common/pubspec.yaml
@@ -54,3 +54,57 @@ flutter:
   assets:
     - assets/animations/
     - assets/icons/
+    - assets/icons/active_device.svg
+    - assets/icons/add_appliance_icon.svg
+    - assets/icons/address_location.svg
+    - assets/icons/air_conditioner_icon.svg
+    - assets/icons/app_icon.png
+    - assets/icons/appliances_icon.svg
+    - assets/icons/arrow_back.svg
+    - assets/icons/arrow_down.svg
+    - assets/icons/arrow_down_grey.svg
+    - assets/icons/arrow_down_white.svg
+    - assets/icons/arrow_left.svg
+    - assets/icons/arrow_right.svg
+    - assets/icons/basic_mode_icon_active.svg
+    - assets/icons/basic_mode_icon_inactive.svg
+    - assets/icons/bluetooth_permission_icon.svg
+    - assets/icons/checked.svg
+    - assets/icons/clock_icon.svg
+    - assets/icons/cross_icon.svg
+    - assets/icons/dark_mode_icon.svg
+    - assets/icons/delete_alert.svg
+    - assets/icons/email.icon.svg
+    - assets/icons/energy_icon_white.svg
+    - assets/icons/ev_charger_icon.svg
+    - assets/icons/eye_closed.icon.svg
+    - assets/icons/eye_open.icon.svg
+    - assets/icons/facebook_icon.svg
+    - assets/icons/file_icon.svg
+    - assets/icons/google_icon.svg
+    - assets/icons/heat_pump.png
+    - assets/icons/heat_pump_icon.svg
+    - assets/icons/home_icon.svg
+    - assets/icons/inactive_device.svg
+    - assets/icons/location_permission_icon.svg
+    - assets/icons/lock.icon.svg
+    - assets/icons/logout_icon.svg
+    - assets/icons/menu_icon.svg
+    - assets/icons/power_icon.svg
+    - assets/icons/power_icon_off.svg
+    - assets/icons/power_plug_icon.svg
+    - assets/icons/search_icon.svg
+    - assets/icons/settings_icon.svg
+    - assets/icons/smart_mode_icon_active.svg
+    - assets/icons/smart_mode_icon_inactive.svg
+    - assets/icons/smart_plug_icon.svg
+    - assets/icons/three_points_horizontal.svg
+    - assets/icons/tick_white.svg
+    - assets/icons/timer_mode_icon_active.svg
+    - assets/icons/timer_mode_icon_inactive.svg
+    - assets/icons/user.icon.svg
+    - assets/icons/user_icon.svg
+    - assets/icons/vacation_mode_icon_active.svg
+    - assets/icons/vacation_mode_icon_inactive.svg
+    - assets/icons/wifi_permission_icon.svg
+    - assets/icons/wifi_strength_icon.svg
